<resources>
    <string name="pcapdroid_app_name" translatable="false">mdm blocking</string>
    <string name="default_collector_ip" translatable="false">127.0.0.1</string>
    <string name="default_collector_port" translatable="false">1234</string>
    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
    <string name="ipv6_and_port" translatable="false">[%1$s]:%2$d</string>
    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
    <string name="sni" translatable="false">SNI</string>
    <string name="url" translatable="false">URL</string>
    <string name="whois_lookup" translatable="false">WHOIS</string>
    <string name="installation_id" translatable="false">Installation ID</string>
    <string name="license_code" translatable="false">License code</string>
    <string name="root" translatable="false">root</string>
    <string name="app_license" translatable="false">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT
        ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License or later</a> for
        more details</string>
    <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br />\n\n
        - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>LGPL-3.0</a>\n\n
        - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
        - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Brotli decoder: <a href='https://github.com/google/brotli/blob/master/LICENSE'>MIT</a>\n\n
        - mitmproxy: <a href='https://github.com/mitmproxy/mitmproxy/blob/main/LICENSE'>MIT</a>\n\n
        - Chaquopy: <a href='https://github.com/chaquo/chaquopy/blob/master/LICENSE.txt'>MIT</a>\n\n
        - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
        - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
        - AppIntro: <a href='https://github.com/AppIntro/AppIntro/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - QrGenerator: <a href='https://github.com/androidmads/QRGenerator/blob/master/LICENSE.md'>MIT</a>\n\n
        - Sparsehash: <a href='https://github.com/sparsehash/sparsehash/blob/master/COPYING'>BSD-3-Clause</a>\n\n
        - CIDRUtils: <a href='https://github.com/edazdarevic/CIDRUtils'>MIT</a>\n\n
        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
        - SourceCodePro font: <a href='https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md'>OFL-1.1</a>\n\n
        </string>
    <string name="wireshark_licenses" translatable="false"><b>PCAP Decryption:</b><br />\n\n
        - Wireshark: <a href='hhttps://github.com/wireshark/wireshark/blob/master/COPYING'>GPL-2.0</a>\n\n
        - ushark: <a href='https://github.com/altafinance/ushark'>GPL-2.0</a>\n\n
        - libiconv: <a href='https://www.gnu.org/software/libiconv'>LGPL-2.1</a>\n\n
        - glib: <a href='https://gitlab.gnome.org/GNOME/glib/-/blob/main/COPYING'>LGPL-2.1</a>\n\n
        - gpgerror: <a href='https://github.com/gpg/libgpg-error/blob/master/COPYING'>LGPL-2.1</a>\n\n
        - gcrypt: <a href='https://gnupg.org/software/libgcrypt/index.html'>LGPL-2.1</a>\n\n
        - nghttp2: <a href='https://github.com/nghttp2/nghttp2/blob/master/COPYING'>MIT</a>\n\n
        </string>
    <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,PackageName,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
    <string name="unlock_token" translatable="false">Unlock token</string>
    <string name="mstartmdm">Start vpn from mdm</string>
    <string name="mremovemdm">remove vpn from mdm</string>
    <string name="mchangepwd">change password</string>
    <string name="mgetcurrentpwd">insert password</string>
    <string name="mnotmatchpwd">not match or empty</string>
    <string name="mwelcomepwd">welcome set password</string>
    <string name="mupdate">update</string>
    <string name="send_mail">send email</string>
    <string name="send">send</string>
    <string name="empty">empty</string>
    <string name="send_successful">send successfully</string>
    <string name="mailsub">רשימה לבנה(בטא)</string>
    <string name="mailbod">Leave here enlightenments and comments and reports and requests</string>
    <string name="mmode_multimedia">multimedia</string>
    <string name="mmode_all">all</string>
    <string name="mdm_settings">mdm settings</string>
    <string name="settings_shortcut">settings shortcut multimedia</string>
    <string name="tvremove_root">If your device is rooted, remove the root after activation to avoid bypasses!</string>
    <string name="bucpcmd">To activate with ADB click here to copy the command!</string>
    <string name="buadbmult">Connecting and disabling to multimedia and root (and the old option to Wi-Fi)!</string>
    <string name="buadbwifi">adb pair/connect with wifi!</string>
    <string name="buqrmdm">barcode qr from device to device!</string>
    <string name="activinstructions">הוראות הפעלה למולטימדיה (ts10, ts18 ועוד)!\nלוחצים על העתקת הקוד הנפוץ למולטימדיה (john@tw-desktop) (באם זה לא הקוד הנכון תוכלו לחפש במתמחים טופ או ברכבים זה לזה מה הקוד שלכם לפתיחת adb)\nלוחצים על פתיחת מצב מפתחים\nמנווטים ולוחצים על ניפוי באגים בusb זה יבקש לכם את הקוד שהעתקתם לפני זה\nחוזרים לאפליקציה לוחצים על \"חיבור והשבתה למולטימדיה ולרוט\" \nלוחצים על \"השבתת חשבונות עם adb למולטימדיה\" מחכים לראות למטה שזה משבית אפליקציות\nלוחצים על \"חיבור למולטימדיה\" מחכים שיהיה כתוב הפעלה הצליחה\nלוחצים על \"הפעלת חשבונות עם adb למולטימדיה\" מחכים לראות למטה שזה מפעיל בחזרה את כל האפליקציות המושבתות\n(במקרה ושכחתם להפעיל בחזרה אפליקציות זה נמצא בפיצ\'רים נוספים/הפעלת חשבונות!)\nבהצלחה!\n\nהוראות הפעלה עם ניפוי באגים אלחוטי!\nכדי להפעיל את החסימה במכשיר סמסונג לדוגמא -\nדבר ראשון תצטרכו להסיר חשבון של סמסונג אם הכנסתם חשבון סמסונג במכשיר.\nתפתחו בהגדרות - מידע על הטלפון (יש גם קיצור לזה באפליקציה) תחפשו את המילה \"build\"\nתלחצו עליו 6 פעמים עד שיהיה כתוב שהנך במצב מפתח\nתנווטו בחזרה להגדרות - מערכת אמור להיות שם משהו חדש - אפשרויות למפתחים. (יש לזה גם קיצור באפליקציה) תכנסו בזה תנווטו לניפוי באגים אלחוטי.\nתצטרכו להתחבר לויפי כדי לפתוח את הניפוי באגים אלחוטי(אפילו שאין בויפי הזה אינטרנט - לדוגמא ממקרר או מזגן או מדפסת...)\nלפני שאתם פותחים ניפוי באגים אלחוטי תפתחו את \"adb pair/connect עם ויפי\" שיש באפליקציה ותלחצו על הלחצן הראשון - \"התחל גילוי לחיבור עם קוד התאמה\" זה יתחיל לחפש תעברו להגדרות/מערכת/ניפוי באגים אלחוטי תפתחו את זה ותתנו אישור לדיאלוג שעולה, ואז תלחצו על חיבור באמצעות קוד התאמה יעלה לכם התראה שבזה תצטרכו להכניס את קוד ההתאמה שכתוב לכם בדיאלוג שעלה לכם, (חשוב להישאר בהגדרות מתי שהדיאלוג עם קוד ההתאמה עדיין לא ירד מהמסך) אחרי שזה מצליח אוטומטית זה עובר למצב הרצת הפקודות של הסתרת חשבונות, הפעלת החסימה, והפעלת חשבונות.\n(במקרה ושכחתם להפעיל בחזרה אפליקציות זה נמצא בפיצ\'רים נוספים/הפעלת חשבונות באמצעות חיבור ויפי!)\nבהצלחה!</string>
    <string name="instructions">כאן תוכלו להתקין את אפליקציית \"חסימת mdm\" על מכשיר חדש או מכשיר מאופס להגדרות יצרן.\n\n--לפניכם 2 אפשרויות התקנה:--\n\n--התקנה דרך נקודה חמה--\nמיועדת להתקנה ישירות ממכשיר זה, במידה והוא מחובר לאינטרנט.\n\n--התקנה דרך רשת Wi-Fi--\nמיועדת להתקנה דרך רשת Wi-Fi משותפת למכשיר זה ולמכשיר החדש או המאופס (הנקודה חמה צריכה להיות כבויה).\n\nלאחר שבחרתם את שיטת ההתקנה המועדפת עליכם, האפליקציה תיצור עבורכם ברקוד מתאים.\nכעת, בצעו את הפעולות הבאות:\n\nהפעילו את המכשיר החדש / המאופס.\nהקישו 6 פעמים רצופות על מסך הפתיחה, עד שהמצלמה תיפתח.\nסרקו את הברקוד שמופיע על המכשיר השולט.\nהתחברו לרשת ה-Wi-Fi או לנקודה החמה שהוקמה במכשיר השולט.\nהמשיכו לפעול על פי ההוראות שתופענה על המסך.\nמזל טוב! יש לכם מכשיר עם mdm.\n\nשימו לב:\nייתכן ואפליקציית ה mdm לא תעבור אוטומטית למכשיר החדש. במקרה כזה, פשוט התקינו אותה בעצמכם – ההרשאה כבר הוקמה.\n\nנ.ב. המכשיר אינו מוגן עד להפעלת ה mdm בפועל.\n</string>
    <string name="in2">כאן תוכלו להתקין את אפליקציית \"חסימת mdm\" על מכשיר חדש או מכשיר מאופס להגדרות יצרן.\n--לפניכם 2 אפשרויות התקנה:--\n--התקנה דרך נקודה חמה--מיועדת להתקנה ישירות ממכשיר זה, במידה והוא מחובר לאינטרנט.\n--התקנה דרך רשת Wi-Fi--מיועדת להתקנה דרך רשת Wi-Fi משותפת למכשיר זה ולמכשיר החדש או המאופס (הנקודה חמה צריכה להיות כבויה).\n\nלאחר שבחרתם את שיטת ההתקנה המועדפת עליכם, האפליקציה תיצור עבורכם ברקוד מתאים.</string>
    <string name="in3">כעת, בצעו את הפעולות הבאות:\n\nהפעילו את המכשיר החדש / המאופס.\nהקישו 6 פעמים רצופות על מסך הפתיחה, עד שהמצלמה תיפתח.\nסרקו את הברקוד שמופיע על המכשיר השולט.\nהתחברו לרשת ה-Wi-Fi או לנקודה החמה שהוקמה במכשיר השולט.\nהמשיכו לפעול על פי ההוראות שתופענה על המסך.\nמזל טוב! יש לכם מכשיר עם \"חסימת mdm\".\n\nשימו לב:\nייתכן ואפליקציית \"חסימת mdm\" לא תעבור אוטומטית למכשיר החדש. במקרה כזה, פשוט התקינו אותה בעצמכם – ההרשאה כבר הוקמה.\n\nנ.ב. המכשיר אינו מוגן עד להפעלת ההשבתות בפועל.</string>
	<string name="sq">"Installing \"MDM blocking\" from an Android device to another device \n using a QR barcode"</string>
    <string name="buinstructionmdm">Instructions for activating the block!</string>
    <string name="budeviceinfo">open device information!</string>
    <string name="budev">Opening developer options!</string>
    <string name="bucppwd">Copy the common code to open ADB for multimedia!</string>
    <string name="sendtodev">Send a CSV file to the developer!</string>
    <string name="buaccount">Open accounts in settings!</string>
    <string name="noneedpwd">not request a password until you return to the main screen - Status</string>
    <string name="sq2">כאן יש לכם הוראות להפעלת החסימה לכל מיני מכשירים</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="protocol">Protocol</string>
    <string name="user_guide">User guide</string>
    <string name="firewall">Firewall</string>
    <string name="block_new_apps">Block newly installed apps</string>
    <string name="whitelist_mode">Whitelist mode</string>
    <string name="original_port">Original port</string>
    <string name="destination_ip">Destination IP address</string>
    <string name="destination_port">Destination port</string>
</resources>