<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toggle_btn"
        android:title=""
        android:orderInCategory="10"
        android:showAsAction="always"
        android:actionViewClass="android.widget.Switch" />

    <item
        android:id="@+id/user_guide"
        android:title="@string/user_guide"
        android:orderInCategory="20"
        android:icon="@drawable/ic_book"
        android:showAsAction="never" />

    <item
        android:id="@+id/whitelist_mode"
        android:title="@string/whitelist_mode"
        android:orderInCategory="25"
        android:checkable="true"
        android:showAsAction="never" />

    <item
        android:id="@+id/block_new_apps"
        android:title="@string/block_new_apps"
        android:orderInCategory="30"
        android:checkable="true"
        android:showAsAction="never" />
</menu>
