<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:paddingTop="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TextInputLayoutOutlined"
            style="@style/TextInputLayoutOutlinedDropdown">

            <AutoCompleteTextView
                android:id="@+id/proto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/protocol" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/original_port"
            android:theme="@style/Theme.TextInputLayoutOutlined"
            style="@style/TextInputLayoutOutlined" >

            <EditText
                android:id="@+id/orig_port"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/destination_ip"
            android:theme="@style/Theme.TextInputLayoutOutlined"
            style="@style/TextInputLayoutOutlined" >

            <EditText
                android:id="@+id/redirect_ip"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/destination_port"
            android:theme="@style/Theme.TextInputLayoutOutlined"
            style="@style/TextInputLayoutOutlined" >

            <EditText
                android:id="@+id/redirect_port"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        
    </LinearLayout>
</ScrollView>
